test/spec_vectors/block/fail/module_52.wat
(module (func $type-value-unreached-select-i32-f64 (result i32) (block (result f64) (select (unreachable) (unreachable) (unreachable)))))